# migrate-from-PostgreSQL-to-ScyllaDB

./: Cargo.toml  LICENSE  readme.md  scyllacommands
src/: lib.rs  main.rs
src/db_ops/: data_manip.rs  mod.rs
src/db_ops/data_definition/: create.rs
